[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repentantcolorfuldriver"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
chalice = "^1.12"
link-preview = "^1.0"
pil-compat = "^1.0"
python = "^3.8"
validators = "^0.14.2"
[tool.poetry.dev-dependencies]
